# ai-voice-receptionist-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  opencode.json  pyproject.toml  skills-lock.json
app/: agent.py  audio.py  auth.py  booking.py  bridge.py  browser_bridge.py  calendar_client.py  config.py  identity.py  main.py  messaging.py  reminders.py  scheduling.py  store.py  twiml.py  web.py
app/static/: app.html  login.html  register.html
app/static/css/: style.css
app/static/js/: app.js  auth.js  pcm-player-processor.js  pcm-recorder-processor.js
deploy/: Dockerfile  README.md
docs/superpowers/plans/: 2026-07-05-voice-receptionist.md  2026-07-05-web-app.md
docs/superpowers/specs/: 2026-07-05-voice-receptionist-design.md  2026-07-05-web-app-design.md
tests/: test_agent.py  test_audio.py  test_auth.py  test_booking.py  test_bridge.py  test_browser_bridge.py  test_calendar_client.py  test_config.py  test_identity.py  test_messaging.py  test_reminders.py  test_scheduling.py  test_store.py  test_twiml.py  test_voice_endpoint.py  test_web.py
